feat: deploy testing endpoint only in alpha environment
- Add environment property to ServiceStackProps (alpha|prod)
- Conditionally create /testing endpoint based on environment
- Set ENVIRONMENT variable in GitHub workflow for alpha/prod
- Update app.ts to read environment from env var
- Document testing endpoint is alpha-only in integration tests

--- a/.github/workflows/infa-and-backend.yml
+++ b/.github/workflows/infa-and-backend.yml
@@ -125,6 +125,7 @@ jobs:
         env:
           CDK_DEFAULT_ACCOUNT: 265870078323
           CDK_DEFAULT_REGION: eu-west-1
+          ENVIRONMENT: alpha
         run: npx cdk deploy --require-approval never
 
   integration-tests-alpha:
@@ -203,4 +204,5 @@ jobs:
         env:
           CDK_DEFAULT_ACCOUNT: 431081169070
           CDK_DEFAULT_REGION: eu-west-1
+          ENVIRONMENT: prod
         run: npx cdk deploy --require-approval never
