feat: add manual approval step for production deployments
- Add production environment with URL for deployment tracking
- Frontend now waits for backend integration tests before deploying to prod
- Production deployments require manual approval after alpha tests pass

--- a/.github/workflows/infa-and-backend.yml
+++ b/.github/workflows/infa-and-backend.yml
@@ -182,6 +182,7 @@ jobs:
         working-directory: infrastructure
     environment:
       name: production
+      url: https://api.apaps.people.aws.dev
 
     steps:
       - name: Checkout repo
