--- a/.github/workflows/infa-and-backend.yml
+++ b/.github/workflows/infa-and-backend.yml
@@ -182,7 +182,7 @@ jobs:
         working-directory: infrastructure
     environment:
       name: production
-      url: https://api.apaps.people.aws.dev
+      url: https://apaps.people.aws.dev
 
     steps:
       - name: Checkout repo
