--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,44 +1,22 @@
 version: 2
 updates:
-  # Frontend npm dependencies
+  # Root npm workspace (manages frontend + infrastructure together)
   - package-ecosystem: "npm"
-    directory: "/frontend"
+    directory: "/"
     schedule:
       interval: "weekly"
       day: "monday"
       time: "09:00"
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 10
     labels:
       - "dependencies"
-      - "frontend"
+      - "npm"
     commit-message:
       prefix: "chore(deps)"
       include: "scope"
     # Group minor/patch updates together to reduce PR noise
     groups:
-      frontend-minor-patch:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-
-  # Infrastructure npm dependencies (CDK)
-  - package-ecosystem: "npm"
-    directory: "/infrastructure"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      - "infrastructure"
-    commit-message:
-      prefix: "chore(deps)"
-      include: "scope"
-    groups:
-      infrastructure-minor-patch:
+      npm-minor-patch:
         patterns:
           - "*"
         update-types:
