--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -48,7 +48,7 @@ jobs:
           skip-dirs: 'backend,infrastructure'
           format: 'table'
           exit-code: '1'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
           ignore-unfixed: true
 
   deploy-alpha:
