--- a/.github/workflows/infa-and-backend.yml
+++ b/.github/workflows/infa-and-backend.yml
@@ -55,7 +55,7 @@ jobs:
           scan-ref: '.'
           format: 'table'
           exit-code: '1'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
           ignore-unfixed: true
         continue-on-error: false
 
